# webfaq

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/: iso3166_to_iso639_2_cldr.json  language_code_origin_mapping.json
results/ara/: MIRACLRetrievalHardNegatives_bm25.json  MIRACLRetrievalHardNegatives_e5.json  MIRACLRetrievalHardNegatives_gte.json  MIRACLRetrievalHardNegatives_hybrid.json  MIRACLRetrievalHardNegatives_jina.json  MIRACLRetrievalHardNegatives_robertaft.json  MIRACLRetrievalHardNegatives_robertapt.json  MrTidyRetrieval_bm25.json  MrTidyRetrieval_e5.json  MrTidyRetrieval_gte.json  MrTidyRetrieval_hybrid.json  MrTidyRetrieval_jina.json  MrTidyRetrieval_robertaft.json  MrTidyRetrieval_robertapt.json  WebFAQ_bm25.json  WebFAQ_e5.json  WebFAQ_gte.json  WebFAQ_hybrid.json  WebFAQ_jina.json  WebFAQ_robertaft.json  WebFAQ_robertapt.json
results/ben/: MIRACLRetrievalHardNegatives_bm25.json  MIRACLRetrievalHardNegatives_e5.json  MIRACLRetrievalHardNegatives_gte.json  MIRACLRetrievalHardNegatives_hybrid.json  MIRACLRetrievalHardNegatives_jina.json  MIRACLRetrievalHardNegatives_robertaft.json  MIRACLRetrievalHardNegatives_robertapt.json  MrTidyRetrieval_bm25.json  MrTidyRetrieval_e5.json  MrTidyRetrieval_gte.json  MrTidyRetrieval_hybrid.json  MrTidyRetrieval_jina.json  MrTidyRetrieval_robertaft.json  MrTidyRetrieval_robertapt.json
results/dan/: WebFAQ_bm25.json  WebFAQ_e5.json  WebFAQ_gte.json  WebFAQ_hybrid.json  WebFAQ_jina.json  WebFAQ_robertaft.json  WebFAQ_robertapt.json
results/deu/: MIRACLRetrievalHardNegatives_bm25.json  MIRACLRetrievalHardNegatives_e5.json  MIRACLRetrievalHardNegatives_gte.json  MIRACLRetrievalHardNegatives_hybrid.json  MIRACLRetrievalHardNegatives_jina.json  MIRACLRetrievalHardNegatives_robertaft.json  MIRACLRetrievalHardNegatives_robertapt.json  WebFAQ_bm25.json  WebFAQ_e5.json  WebFAQ_gte.json  WebFAQ_hybrid.json  WebFAQ_jina.json  WebFAQ_robertaft.json  WebFAQ_robertapt.json
results/eng/: MIRACLRetrievalHardNegatives_bm25.json  MIRACLRetrievalHardNegatives_e5.json  WebFAQ_e5.json  (+18 more)
(+305 files in other folders)
